--- a/index.html
+++ b/index.html
@@ -1,189 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="bn">
 <head>
-  <title>Live Matches</title>
+  <meta charset="UTF-8" />
+  <title>লাইভ খেলা</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.8.1/shaka-player.compiled.min.js"></script>
   <style>
-    body {
-      font-family: sans-serif;
-      padding: 10px;
-      background-color: #121212;
-      color: #fff;
-    }
-    .match-card {
-      background: #1e1e1e;
-      border: 1px solid #444;
-      border-radius: 10px;
-      padding: 15px;
-      margin-bottom: 20px;
-      text-align: center;
-      box-shadow: 0 2px 10px rgba(255, 255, 255, 0.05);
-    }
-    .team-logo {
-      width: 60px;
-      height: 60px;
-      object-fit: contain;
-    }
-    .live-tag {
-      color: #f44336;
-      font-size: 20px;
-      font-weight: bold;
-      animation: bounce 1s infinite;
-      display: none;
-    }
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-5px); }
-    }
-    .countdown {
-      font-size: 18px;
-      margin: 10px;
-    }
-    .video-wrapper {
-      margin-top: 10px;
-    }
-    video, iframe {
-      width: 100%;
-      height: 300px;
-      margin-top: 10px;
-      border-radius: 10px;
-    }
+    body { background: #111; color: white; font-family: sans-serif; padding: 10px }
+    .match { border: 1px solid #444; border-radius: 10px; padding: 10px; margin: 10px 0; background: #222 }
+    video { width: 100%; height: auto; margin-top: 10px; border-radius: 10px }
+    .live { color: red; font-weight: bold; animation: pulse 1s infinite }
+    @keyframes pulse { 0%{opacity:1} 50%{opacity:.5} 100%{opacity:1} }
   </style>
 </head>
 <body>
-  <h2 style="text-align:center">Live Matches</h2>
-  <div id="matchesContainer"></div>
+  <h2>Live / Upcoming Matches</h2>
+  <div id="container"></div>
 
   <script>
-    const url = "https://script.google.com/macros/s/AKfycbyijJ7N3HWn11qLz3ZsIrbkZQNLy2gYWZgSZpKWoovjjxp1Tm-3lY-JnUyAWcADlAzZkw/exec?action=getAllMatches";
-
-    // Load Shaka Player
-    const shakaScript = document.createElement("script");
-    shakaScript.src = "https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.8.1/shaka-player.compiled.min.js";
-    document.head.appendChild(shakaScript);
-
-    fetch(url)
-      .then(res => res.json())
-      .then(data => {
-        const container = document.getElementById("matchesContainer");
-        const now = new Date().getTime();
-        const sortedMatches = data.matches.sort((a, b) => new Date(a.matchtime) - new Date(b.matchtime));
-
-        sortedMatches.forEach((match, idx) => {
-          const card = document.createElement("div");
-          card.className = "match-card";
-
-          card.innerHTML = `
-            <h3>${match.title}</h3>
-            <div>
-              <img src="${match.logo1}" class="team-logo" />
-              <span>${match.team1}</span>
-              <strong> VS </strong>
-              <span>${match.team2}</span>
-              <img src="${match.logo2}" class="team-logo" />
-            </div>
-            <div id="countdown${idx}" class="countdown">Loading...</div>
-            <div id="live${idx}" class="live-tag">LIVE NOW</div>
-            <div class="video-wrapper" id="video${idx}"></div>
-          `;
-
-          container.appendChild(card);
-
-          const matchTime = new Date(match.matchtime).getTime();
-          const countdownEl = document.getElementById(`countdown${idx}`);
-          const liveTag = document.getElementById(`live${idx}`);
-          const videoArea = document.getElementById(`video${idx}`);
-
-          const interval = setInterval(() => {
-            const now = new Date().getTime();
-            const distance = matchTime - now;
-
-            if (distance <= 0) {
-              clearInterval(interval);
-              countdownEl.innerText = "";
-              liveTag.style.display = "block";
-
-              match.links.forEach((link, i) => {
-                const label = document.createElement("div");
-                label.innerText = `Server ${i + 1}`;
-                label.style.margin = "10px 0";
-                label.style.fontWeight = "bold";
-                videoArea.appendChild(label);
-
-                if (link.includes(".mpd")) {
-                  const video = document.createElement("video");
-                  video.controls = true;
-                  video.autoplay = true;
-                  video.style.display = "block";
-                  videoArea.appendChild(video);
-
-                  const waitForShaka = setInterval(() => {
-                    if (window.shaka && shaka.Player) {
-                      clearInterval(waitForShaka);
-                      shaka.polyfill.installAll();
-                      if (shaka.Player.isBrowserSupported()) {
-                        const player = new shaka.Player(video);
-
-                        // Optional DRM config — modify if needed
-                        player.configure({
-                          drm: {
-                            servers: {
-                              'com.widevine.alpha': 'https://your-license-server.com'
-                            }
-                          }
-                        });
-
-                        // Optional headers
-                        player.getNetworkingEngine().registerRequestFilter((type, request) => {
-                          if (type === shaka.net.NetworkingEngine.RequestType.MANIFEST ||
-                              type === shaka.net.NetworkingEngine.RequestType.SEGMENT) {
-                            request.headers['Referer'] = 'https://example.com/';
-                            request.headers['Authorization'] = 'Bearer YOUR_TOKEN';
-                          }
-                        });
-
-                        player.load(link).then(() => {
-                          console.log("Shaka loaded:", link);
-                        }).catch(err => {
-                          console.error("Shaka error:", err);
-                        });
-                      } else {
-                        videoArea.innerHTML += "<div style='color:red'>Browser doesn't support DRM playback.</div>";
-                      }
-                    }
-                  }, 100);
-                } else if (link.includes(".m3u8")) {
-                  const video = document.createElement("video");
-                  video.controls = true;
-                  video.autoplay = true;
-                  video.style.display = "block";
-                  videoArea.appendChild(video);
-
-                  if (Hls.isSupported()) {
-                    const hls = new Hls();
-                    hls.loadSource(link);
-                    hls.attachMedia(video);
-                  } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
-                    video.src = link;
-                  }
-                } else {
-                  const iframe = document.createElement("iframe");
-                  iframe.src = link;
-                  iframe.allowFullscreen = true;
-                  iframe.style.display = "block";
-                  videoArea.appendChild(iframe);
-                }
-              });
-            } else {
-              const h = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-              const m = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-              const s = Math.floor((distance % (1000 * 60)) / 1000);
-              countdownEl.innerText = `Starts in: ${h}h ${m}m ${s}s`;
-            }
-          }, 1000);
-        });
+    const api = 'https://script.google.com/macros/s/AKfycbxel9ao32GffJa02_FZU9Q8IQY2FuRGuH2wv5lnwOaE957VU9jElvwut9rij-tRPDbF/exec?action=getAllMatches';
+    fetch(api).then(r => r.json()).then(data => {
+      const c = document.getElementById('container');
+      const now = new Date().getTime();
+      data.matches.sort((a, b) => {
+        const timeA = new Date(a.matchtime).getTime();
+        const timeB = new Date(b.matchtime).getTime();
+        return (timeA <= now ? -1 : 1) - (timeB <= now ? -1 : 1) || timeA - timeB;
       });
+      data.matches.forEach((m, i) => {
+        const t = new Date(m.matchtime).getTime();
+        const isLive = t <= now;
+        const div = document.createElement('div');
+        div.className = "match";
+        div.innerHTML = `
+          <h3>${m.title}</h3>
+          <p>${m.team1} vs ${m.team2}</p>
+          <div>${isLive ? '<span class="live">LIVE NOW</span>' : 'Match starts soon'}</div>
+          <div id="player${i}"></div>
+        `;
+        c.appendChild(div);
+
+        if (isLive) {
+          m.links.forEach((link, idx) => {
+            const video = document.createElement('video');
+            video.controls = true;
+            div.appendChild(video);
+            const player = new shaka.Player(video);
+            player.getNetworkingEngine().registerRequestFilter((type, request) => {
+              if (type === shaka.net.NetworkingEngine.RequestType.MANIFEST ||
+                  type === shaka.net.NetworkingEngine.RequestType.SEGMENT) {
+                if (link.referer) request.headers['Referer'] = link.referer;
+                if (link.cookie) request.headers['Cookie'] = link.cookie;
+                if (link.authorization) request.headers['Authorization'] = link.authorization;
+              }
+            });
+            if (link.drm) {
+              player.configure({ drm: { servers: { 'com.widevine.alpha': link.drm.licenseServer } } });
+            }
+            player.load(link.url).catch(e => console.error('Error:', e));
+          });
+        }
+      });
+    });
   </script>
 </body>
 </html>
