--- a/admin.html
+++ b/admin.html
@@ -1,52 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="bn">
 <head>
+  <meta charset="UTF-8">
   <title>Admin Panel</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    input, textarea { width: 100%; margin-bottom: 10px; }
-    button { padding: 10px 20px; }
+    body { font-family: sans-serif; background: #f0f0f0; padding: 20px; }
+    input, textarea { width: 100%; margin: 5px 0; padding: 8px; }
+    button { margin: 5px 0; padding: 10px; }
   </style>
 </head>
 <body>
-  <h2>Add Match</h2>
-  <input id="title" placeholder="Match Title" />
-  <input id="team1" placeholder="Team 1" />
-  <input id="team2" placeholder="Team 2" />
-  <input id="logo1" placeholder="Logo 1 URL" />
-  <input id="logo2" placeholder="Logo 2 URL" />
-  <input id="matchTime" type="datetime-local" />
-  <textarea id="links" placeholder="Links (e.g., Server 1|https://link1.m3u8,Server 2|https://link2.mpd)"></textarea>
-  <button onclick="addMatch()">Add Match</button>
-
-  <h2>Delete Match</h2>
-  <input id="deleteTitle" placeholder="Match Title to Delete" />
-  <button onclick="deleteMatch()">Delete Match</button>
+  <h2>নোটিশ ও টেলিগ্রাম লিংক</h2>
+  <textarea id="notice" placeholder="নোটিশ লিখুন"></textarea>
+  <input id="telegram" placeholder="টেলিগ্রাম লিংক লিখুন" />
+  <button onclick="updateSettings()">সেভ</button>
 
   <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbxCQzq5jEQypyO626Xxc4__Ss8CorecGd9jwEylX177fSza0R7kSM6OfCVQkPjoTyXeEA/exec';
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbxt0peFOvLHEPNt54H0Cf3yXBVA6PHGOD680jk8hf_Qo3-pPzv-kJAnRWDv1VBUJAwo/exec'; // Replace with Apps Script Web App
 
-    function addMatch() {
-      const params = new URLSearchParams({
-        action: 'addMatch',
-        title: document.getElementById('title').value,
-        team1: document.getElementById('team1').value,
-        team2: document.getElementById('team2').value,
-        logo1: document.getElementById('logo1').value,
-        logo2: document.getElementById('logo2').value,
-        matchTime: document.getElementById('matchTime').value,
-        links: document.getElementById('links').value
-      });
-      fetch(`${scriptURL}?${params}`)
-        .then(res => res.text())
-        .then(alert);
-    }
+    function updateSettings() {
+      const notice = document.getElementById('notice').value;
+      const telegram = document.getElementById('telegram').value;
 
-    function deleteMatch() {
-      const title = document.getElementById('deleteTitle').value;
-      fetch(`${scriptURL}?action=deleteMatch&title=${encodeURIComponent(title)}`)
-        .then(res => res.text())
-        .then(alert);
+      const payload = {
+        notice, telegram
+      };
+
+      fetch(scriptURL, {
+        method: "POST",
+        body: JSON.stringify(payload),
+        headers: { "Content-Type": "application/json" }
+      }).then(() => alert("আপডেট হয়েছে"));
     }
   </script>
 </body>
