--- a/index.html
+++ b/index.html
@@ -1,326 +1,66 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>লাইভ ম্যাচ দেখুন</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0; padding: 0;
-    background-color: #f4f4f4;
-    color: #222;
-  }
-  .dark-mode {
-    background-color: #121212;
-    color: #eee;
-  }
-  header {
-    background: #007bff;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    position: sticky;
-    top: 0;
-  }
-  #notice {
-    background: #ffc107;
-    padding: 10px;
-    margin-bottom: 10px;
-    text-align: center;
-  }
-  #search {
-    width: 95%;
-    padding: 8px;
-    margin: 10px auto;
-    display: block;
-    font-size: 16px;
-  }
-  .container {
-    max-width: 900px;
-    margin: auto;
-    padding: 0 10px 30px;
-  }
-  h2 {
-    border-bottom: 2px solid #007bff;
-    padding-bottom: 5px;
-  }
-  .match {
-    background: white;
-    margin: 10px 0;
-    padding: 10px;
-    border-radius: 6px;
-    box-shadow: 0 0 5px rgba(0,0,0,0.1);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .teams {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-  .team-logo {
-    width: 40px;
-    height: 40px;
-    object-fit: contain;
-  }
-  .countdown {
-    font-weight: bold;
-    min-width: 150px;
-    text-align: center;
-  }
-  .links {
-    display: flex;
-    gap: 6px;
-  }
-  .links button {
-    background: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    padding: 6px 10px;
-    cursor: pointer;
-    font-size: 14px;
-  }
-  .live-badge {
-    color: red;
-    font-weight: bold;
-    animation: pulse 1.5s infinite;
-  }
-  @keyframes pulse {
-    0%, 100% {opacity: 1;}
-    50% {opacity: 0.5;}
-  }
-  #darkModeToggle {
-    position: fixed;
-    bottom: 15px;
-    right: 15px;
-    background: #007bff;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    width: 48px;
-    height: 48px;
-    font-size: 20px;
-    cursor: pointer;
-  }
-  #homeBtn {
-    position: fixed;
-    bottom: 80px;
-    right: 15px;
-    background: #28a745;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    width: 48px;
-    height: 48px;
-    font-size: 20px;
-    cursor: pointer;
-  }
-</style>
+  <meta charset="UTF-8">
+  <title>লাইভ খেলা</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body { font-family: Arial; background: #111; color: #fff; padding: 10px; }
+    .match { border: 1px solid #333; padding: 10px; margin: 10px 0; border-radius: 10px; background: #222; }
+    .live { border-color: red; animation: pulse 1s infinite; }
+    @keyframes pulse { 0% { box-shadow: 0 0 5px red; } 100% { box-shadow: 0 0 15px red; } }
+    .teams img { height: 30px; }
+    .links button { margin: 5px; padding: 5px 10px; }
+    .countdown { color: yellow; font-weight: bold; }
+  </style>
 </head>
 <body>
-<header>
-  <h1>লাইভ খেলা</h1>
-  <div id="notice"></div>
-</header>
+  <h2>⚽ লাইভ খেলা</h2>
+  <div id="matchList">লোড হচ্ছে...</div>
 
-<input type="text" id="search" placeholder="ম্যাচ খুঁজুন..." />
+  <script>
+    const API = "https://script.google.com/macros/s/AKfycbxtBCwpzWkODkQiDYPySJt07TQkjDhQ3fz4SFquq635Nvp_LUkSixpGxMJyP5UFDgfYKg/exec";
 
-<div class="container">
-  <h2>লাইভ ম্যাচ</h2>
-  <div id="liveMatches"></div>
-  <h2>আসন্ন ম্যাচ</h2>
-  <div id="upcomingMatches"></div>
-</div>
+    async function fetchMatches() {
+      const res = await fetch(API);
+      const matches = await res.json();
+      const now = new Date();
+      const live = [], upcoming = [];
 
-<button id="darkModeToggle" title="ডার্ক মোড চালু/বন্ধ">🌙</button>
-<button id="homeBtn" title="হোম">🏠</button>
-
-<script>
-  const apiBase = "https://script.google.com/macros/s/AKfycbwuwM3psGin6LzIcDeoyyrzHDbPl6Gb7HGx8DJvoBF_BC01VC3poCyjwBgvpiwLkEhXCw/exec";
-
-  let settings = {};
-  let matches = [];
-
-  // Load settings from API
-  async function loadSettings() {
-    const res = await fetch(apiBase + "?action=settings");
-    settings = await res.json();
-    document.getElementById("notice").textContent = settings.notice || "";
-    if(settings.darkMode === "on") {
-      document.body.classList.add("dark-mode");
-    }
-  }
-
-  // Load matches from API
-  async function loadMatches() {
-    const res = await fetch(apiBase + "?action=matches");
-    matches = await res.json();
-    renderMatches();
-  }
-
-  // Countdown helper
-  function getCountdown(matchTime) {
-    const now = new Date();
-    const matchDate = new Date(matchTime);
-    let diff = matchDate - now;
-
-    if(diff <= 0) return null;
-    let h = Math.floor(diff / (1000*60*60));
-    let m = Math.floor((diff % (1000*60*60)) / (1000*60));
-    let s = Math.floor((diff % (1000*60)) / 1000);
-    return `${h}ঘঃ ${m}মি ${s}সেক`;
-  }
-
-  // Live duration countdown (how long live)
-  function getLiveDuration(startTime) {
-    const now = new Date();
-    const start = new Date(startTime);
-    let diff = now - start;
-    if(diff < 0) return "0 মি";
-    let m = Math.floor(diff / (1000*60));
-    return `${m} মিনিট`;
-  }
-
-  // Render matches UI
-  function renderMatches() {
-    const liveDiv = document.getElementById("liveMatches");
-    const upcomingDiv = document.getElementById("upcomingMatches");
-
-    // Clear
-    liveDiv.innerHTML = "";
-    upcomingDiv.innerHTML = "";
-
-    // Separate live & upcoming
-    const liveMatches = [];
-    const upcomingMatches = [];
-
-    const now = new Date();
-
-    matches.forEach(match => {
-      const matchTime = new Date(match.MatchTime);
-      const countdown = getCountdown(match.MatchTime);
-
-      // Check if live: countdown finished && less than 3 hours from start (adjust as needed)
-      if(countdown === null && (now - matchTime) < 3*60*60*1000) {
-        liveMatches.push(match);
-      } else {
-        upcomingMatches.push(match);
-      }
-    });
-
-    // Sort upcoming by date ascending
-    upcomingMatches.sort((a,b) => new Date(a.MatchTime) - new Date(b.MatchTime));
-
-    // Render live matches first
-    liveMatches.forEach(match => {
-      liveDiv.appendChild(createMatchElement(match, true));
-    });
-
-    // Render upcoming matches next
-    upcomingMatches.forEach(match => {
-      upcomingDiv.appendChild(createMatchElement(match, false));
-    });
-  }
-
-  // Create match card element
-  function createMatchElement(match, isLive) {
-    const div = document.createElement("div");
-    div.className = "match";
-
-    const teamsDiv = document.createElement("div");
-    teamsDiv.className = "teams";
-
-    const team1Logo = document.createElement("img");
-    team1Logo.src = match.Team1Logo;
-    team1Logo.alt = match.Team1;
-    team1Logo.className = "team-logo";
-
-    const team2Logo = document.createElement("img");
-    team2Logo.src = match.Team2Logo;
-    team2Logo.alt = match.Team2;
-    team2Logo.className = "team-logo";
-
-    const vsText = document.createElement("span");
-    vsText.textContent = `${match.Team1} বনাম ${match.Team2}`;
-
-    teamsDiv.appendChild(team1Logo);
-    teamsDiv.appendChild(vsText);
-    teamsDiv.appendChild(team2Logo);
-
-    div.appendChild(teamsDiv);
-
-    const countdownDiv = document.createElement("div");
-    countdownDiv.className = "countdown";
-
-    if(isLive) {
-      countdownDiv.innerHTML = `<span class="live-badge">LIVE</span><br>কালো ${getLiveDuration(match.MatchTime)}`;
-    } else {
-      countdownDiv.textContent = getCountdown(match.MatchTime) || "শুরু হয়েছে";
-    }
-
-    div.appendChild(countdownDiv);
-
-    // Links buttons
-    const linksDiv = document.createElement("div");
-    linksDiv.className = "links";
-
-    if(match.Links) {
-      const linkArr = match.Links.split(";").map(l => l.trim());
-      linkArr.forEach(linkStr => {
-        const [url, name] = linkStr.split(",");
-        if(url && name) {
-          const btn = document.createElement("button");
-          btn.textContent = name;
-          btn.onclick = () => {
-            // Open player page or popup
-            openPlayer(url);
-          };
-          linksDiv.appendChild(btn);
-        }
+      matches.forEach(m => {
+        const time = new Date(m["Match Time"]);
+        const diff = (time - now) / 1000;
+        if (diff <= 0 && diff > -7200) live.push({ ...m, time });
+        else if (diff > 0) upcoming.push({ ...m, time });
       });
+
+      const finalList = [...live, ...upcoming];
+      document.getElementById("matchList").innerHTML = finalList.map(m => {
+        const isLive = m.time <= new Date();
+        const mins = isLive ? Math.floor((new Date() - m.time) / 60000) : Math.ceil((m.time - new Date()) / 1000);
+        const countdown = isLive ? `লাইভ: ${mins} মিনিট` : `শুরু হবে ${mins} সেকেন্ডে`;
+
+        return `
+        <div class="match ${isLive ? 'live' : ''}">
+          <div class="teams">
+            <img src="${m["Logo 1"]}" /> <strong>${m["Team 1"]}</strong> vs 
+            <strong>${m["Team 2"]}</strong> <img src="${m["Logo 2"]}" />
+          </div>
+          <div class="countdown">${countdown}</div>
+          <div class="links">
+            ${m.Links.map(l => `<button onclick="openPlayer('${l.url}')">${l.name}</button>`).join('')}
+          </div>
+        </div>`;
+      }).join('');
     }
 
-    div.appendChild(linksDiv);
-
-    return div;
-  }
-
-  // Open player popup or new tab
-  function openPlayer(url) {
-    window.open(url, "_blank");
-  }
-
-  // Search matches
-  document.getElementById("search").addEventListener("input", e => {
-    const q = e.target.value.toLowerCase();
-    const liveDiv = document.getElementById("liveMatches");
-    const upcomingDiv = document.getElementById("upcomingMatches");
-
-    function filterMatches(container, isLive) {
-      const children = Array.from(container.children);
-      children.forEach(child => {
-        const text = child.textContent.toLowerCase();
-        child.style.display = text.includes(q) ? "" : "none";
-      });
+    function openPlayer(url) {
+      const win = window.open();
+      win.document.write(`<video controls autoplay style="width:100%;height:100%" src="${url}"></video>`);
     }
 
-    filterMatches(liveDiv, true);
-    filterMatches(upcomingDiv, false);
-  });
-
-  // Dark mode toggle
-  document.getElementById("darkModeToggle").addEventListener("click", () => {
-    document.body.classList.toggle("dark-mode");
-  });
-
-  // Home button click
-  document.getElementById("homeBtn").addEventListener("click", () => {
-    window.location.href = "/";
-  });
-
-  // Initial load
-  loadSettings().then(loadMatches);
-  setInterval(loadMatches, 60000); // Auto-refresh
+    fetchMatches();
+    setInterval(fetchMatches, 60000); // প্রতি ১ মিনিটে আপডেট
+  </script>
+</body>
+</html>
