--- a/index.html
+++ b/index.html
@@ -2,26 +2,30 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Video Player with Resolution Selector</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.6.0/shaka-player.compiled.js"></script>
+  <title>CricNex Live Player</title>
+  <script src="https://cdn.jsdelivr.net/npm/shaka-player@4.6.0/dist/shaka-player.compiled.js"></script>
   <style>
-    body { background: #000; color: #fff; text-align: center; }
-    video { width: 90%; max-width: 720px; margin-top: 20px; }
+    body { background: #000; color: #fff; font-family: sans-serif; text-align: center; }
+    video { width: 95%; max-width: 720px; margin-top: 10px; border: 4px solid #00e676; border-radius: 10px; }
     #qualityLevels {
-      margin-top: 10px;
-      background: #222;
-      color: #fff;
+      background: #111; color: white; padding: 6px 10px; border-radius: 4px; margin-top: 10px;
+    }
+    .watermark {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: rgba(0,0,0,0.6);
       padding: 5px 10px;
+      color: #00e676;
       border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
-  <h2>CricNex | BDStreamHub</h2>
-  <video id="video" controls autoplay></video>
-  <br />
+  <h2>CricNex Live | Powered by BDStreamHub</h2>
+  <div class="watermark">CricNex | BDStreamHub</div>
+  <video id="video" autoplay controls></video><br>
   <select id="qualityLevels"></select>
 
   <script>
@@ -31,7 +35,6 @@
     async function initPlayer() {
       const player = new shaka.Player(video);
 
-      // DRM config
       player.configure({
         drm: {
           clearKeys: {
@@ -44,9 +47,7 @@
         await player.load('https://ssc-1-enc.edgenextcdn.net/out/v1/c696e4819b55414388a1a487e8a45ca1/index.mpd');
         console.log('Video loaded');
 
-        // Populate quality selector
         const tracks = player.getVariantTracks();
-        // Clear old options
         qualitySelector.innerHTML = '';
         tracks.forEach((track, index) => {
           const option = document.createElement('option');
@@ -55,14 +56,14 @@
           qualitySelector.appendChild(option);
         });
 
-        // On selection change, switch quality
         qualitySelector.addEventListener('change', () => {
           const selectedTrack = tracks[qualitySelector.value];
-          player.selectVariantTrack(selectedTrack, /* clearBuffer= */ true);
+          player.selectVariantTrack(selectedTrack, true);
         });
 
       } catch (e) {
         console.error('Error loading video', e);
+        alert('Video Load Failed!');
       }
     }
 
