--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>CricNex DRM Player</title>
+    <title>CricNex DRM Video Player</title>
     <script src="https://cdn.jsdelivr.net/npm/shaka-player@4.6.0/dist/shaka-player.compiled.js"></script>
     <style>
-      video { width: 95%; max-width: 720px; margin-top: 10px; background: black; }
+      body { background: #000; color: white; text-align: center; }
+      video { width: 95%; max-width: 720px; margin-top: 20px; }
       .watermark {
         position: absolute;
         top: 10px;
         right: 10px;
         background: rgba(0,0,0,0.6);
-        padding: 5px 10px;
-        color: #00e676;
-        border-radius: 5px;
+        padding: 6px 10px;
         font-size: 14px;
+        border-radius: 5px;
       }
     </style>
   </head>
@@ -24,6 +24,7 @@
 
     <script>
       shaka.polyfill.installAll();
+
       if (shaka.Player.isBrowserSupported()) {
         initPlayer();
       } else {
@@ -34,6 +35,7 @@
         const video = document.getElementById('video');
         const player = new shaka.Player(video);
 
+        // ClearKey license
         player.configure({
           drm: {
             clearKeys: {
@@ -44,10 +46,10 @@
 
         try {
           await player.load('https://ssc-1-enc.edgenextcdn.net/out/v1/c696e4819b55414388a1a487e8a45ca1/index.mpd');
-          console.log('Video loaded successfully');
-        } catch (error) {
-          console.error('Error code', error.code, 'object', error);
-          alert('Video load failed: ' + error.message);
+          console.log('Video loaded!');
+        } catch (e) {
+          console.error('Error code', e.code, 'object', e);
+          alert('Video load failed: ' + e.code + ' - ' + e.message);
         }
       }
     </script>
